// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexCell should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="flexCell"
    style="min-width: 0; flex-basis: 0px;"
  />
</DocumentFragment>
`;

exports[`FlexCell should be rendered correctly with props 1`] = `
<DocumentFragment>
  <div
    class="flexCell"
    style="min-width: 120px; flex-grow: 1; flex-shrink: 1; flex-basis: 100%; text-align: left; align-self: center;"
  />
</DocumentFragment>
`;
